a ver si se mueve bien

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           source: target/demo-0.0.1-SNAPSHOT.war
-          target: /home/ubuntu/demo.war
+          target: /home/ubuntu/demo-0.0.1-SNAPSHOT.war
 
       # 4️⃣ Mover el archivo .war a la ubicación de Tomcat y ajustar permisos
       - name: Move .war to Tomcat directory and set permissions
@@ -42,7 +42,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_PRIVATE_KEY }}  # Añadir la clave privada para SSH
           script: |
-              sudo mv /home/ubuntu/demo.war /var/lib/tomcat10/webapps/demo.war
+              sudo mv /home/ubuntu/demo-0.0.1-SNAPSHOT.war /var/lib/tomcat10/webapps/demo.war
               sudo chown tomcat:tomcat /var/lib/tomcat10/webapps/demo.war
               sudo chmod 755 /var/lib/tomcat10/webapps/demo.war
       # 5️⃣ Reiniciar Tomcat
