a ver si se mueve bien2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
           host: 54.205.253.120
           username: ubuntu
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: target/demo-0.0.1-SNAPSHOT.war
-          target: /home/ubuntu/demo-0.0.1-SNAPSHOT.war
+          source: "target/demo-0.0.1-SNAPSHOT.war"
+          target: /home/ubuntu/
 
       # 4️⃣ Mover el archivo .war a la ubicación de Tomcat y ajustar permisos
       - name: Move .war to Tomcat directory and set permissions
