--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           host: 54.205.253.120
           username: ubuntu
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "target/demo-0.0.1-SNAPSHOT.war"
+          source: target/demo-0.0.1-SNAPSHOT.war
           target: /home/ubuntu/
 
       # 4️⃣ Mover el archivo .war a la ubicación de Tomcat y ajustar permisos
