--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql://database-maven.cl8q6mac8kq5.us-east-1.rds.amazonaws.com:3306/mi_basedatos
-spring.datasource.username=admin
-spring.datasource.password=adminadmin
+spring.datasource.url=jdbc:mysql://<endpoint>:3306/mi_basedatos
+spring.datasource.username=<user>
+spring.datasource.password=<password>
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
