--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql://<endpoint>:3306/mi_basedatos
-spring.datasource.username=<user>
-spring.datasource.password=<password>
+spring.datasource.url=jdbc:mysql://demo-db.c61iy9zrzrbq.us-east-1.rds.amazonaws.com:3306/mi_basedatos
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
