--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,55 +1,67 @@
 name: Deploy Spring Boot to EC2 (Ubuntu)  # Nombre del workflow
 
 on:
-  push:                                 # Workflow activa cuando se hace push.
+  push:                                   # Workflow se activa cuando se hace push.
     branches:
-      - main                            # Solo se ejecuta si push en rama main
+      - main                              # Solo se ejecuta si el push es en la rama main.
 
 jobs:
-  build-and-deploy:                     # Define trabajo llamado buildanddeploy
-    runs-on: ubuntu-latest              # El trabajo se ejecuta en Ubuntu
+  build-and-deploy:                       # Define el trabajo llamado build-and-deploy.
+    runs-on: ubuntu-latest                # El trabajo se ejecuta en Ubuntu.
+    env: 
+      DB_ENDPOINT: ${{ secrets.DB_ENDPOINT }} 
+      DB_USERNAME: ${{ secrets.DB_USERNAME }} 
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
     steps:
-      # 1️⃣ Descargar el código fuente del repositorio
-      - name: Checkout source code       # Nombre del paso.
-        uses: actions/checkout@v2        # Clonar el repositorio.
+      # 1️⃣ Descargar el código fuente del repositorio.
+      - name: Checkout source code       
+        uses: actions/checkout@v2        
 
-      # 2️⃣ Configurar JDK 21 (Java Development Kit)
-      - name: Set up JDK 21             # Nombre del paso.
-        uses: actions/setup-java@v2     # Configurar el entorno Java.
+      # 2️⃣ Configurar JDK 21 (Java Development Kit).
+      - name: Set up JDK 21             
+        uses: actions/setup-java@v2     
         with:
-          java-version: 21              # Especifica la versión de Java (21).
-          distribution: temurin         # Utiliza dist OpenJDK llamada Temurin.
+          java-version: 21              
+          distribution: temurin         
 
-      # 3️⃣ Construir la aplicación usando Maven
-      - name: Build with Maven          # Nombre del paso.
-        run: mvn clean package          # Construir proyecto, generando .war.
+      # 3️⃣ Construir la aplicación usando Maven.
+      - name: Build with Maven          
+        run: mvn clean package          
 
-      # 4️⃣ Copiar el archivo .war a la instancia EC2
-      - name: Copy .war to EC2          # Nombre del paso.
-        uses: appleboy/scp-action@v0.1.5  # Copiar archivos a servidor remoto
+      # 4️⃣ Copiar el archivo .war a la instancia EC2.
+      - name: Copy .war to EC2          
+        uses: appleboy/scp-action@v0.1.5  
         with:
-          host: ${{ secrets.EC2_HOST }}    # Dirección IP de la instancia EC2 
-          username: ${{ secrets.EC2_USERNAME }}  # Nombre usuario EC2
-          key: ${{ secrets.EC2_PRIVATE_KEY }}    # Clave privada SSH 
-          source: target/demo-0.0.1-SNAPSHOT.war  # Ruta del archivo .war 
-          target: /home/ubuntu/                   # Carpeta destino en EC2
-          strip_components: 1                     # Elimina directorios 
+          host: ${{ secrets.EC2_HOST }}     
+          username: ${{ secrets.EC2_USERNAME }} 
+          key: ${{ secrets.EC2_PRIVATE_KEY }}  
+          source: target/demo-0.0.1-SNAPSHOT.war  
+          target: /home/ubuntu/                 
+          strip_components: 1                   
 
-      # 5️⃣ Mover el archivo .war a la carpeta webapps de Tomcat y configurar permisos
-      - name: Move .war to Tomcat directory and set permissions  
-        uses: appleboy/ssh-action@master        # Acción ssh-action
+      # 5️⃣ Configurar variables de entorno y desplegar la aplicación en Tomcat.
+      - name: Configure environment variables and deploy  
+        uses: appleboy/ssh-action@master        
         with:
-          host: ${{ secrets.EC2_HOST }}         # Dirección IP de EC2
-          username: ${{ secrets.EC2_USERNAME }} # Nombre de usuario de EC2
-          key: ${{ secrets.EC2_PRIVATE_KEY }}   # Clave privada SSH 
+          host: ${{ secrets.EC2_HOST }}         
+          username: ${{ secrets.EC2_USERNAME }} 
+          key: ${{ secrets.EC2_PRIVATE_KEY }}   
           script: |
-            # Mover el archivo .war a la carpeta de despliegue de Tomcat.
+            # 1️⃣ Configurar variables de entorno en el archivo /etc/environment para persistencia.
+            echo "export DB_ENDPOINT=${{ secrets.DB_ENDPOINT }}" | sudo tee -a /etc/environment
+            echo "export DB_USERNAME=${{ secrets.DB_USERNAME }}" | sudo tee -a /etc/environment
+            echo "export DB_PASSWORD=${{ secrets.DB_PASSWORD }}" | sudo tee -a /etc/environment
+            
+            # 2️⃣ Recargar las variables de entorno en la sesión actual.
+            source /etc/environment
+
+            # 3️⃣ Mover el archivo .war a la carpeta de despliegue de Tomcat.
             sudo mv /home/ubuntu/demo-0.0.1-SNAPSHOT.war /var/lib/tomcat10/webapps/demo.war  
-            # Cambiar el propietario del archivo a "tomcat" para que el servicio tenga acceso.
+
+            # 4️⃣ Cambiar el propietario y permisos del archivo para que Tomcat pueda acceder.
             sudo chown tomcat:tomcat /var/lib/tomcat10/webapps/demo.war  
-            # Cambiar los permisos del archivo para que sea ejecutable.
             sudo chmod 755 /var/lib/tomcat10/webapps/demo.war 
- 
-            # Reiniciar el servicio Tomcat para cargar el nuevo archivo .war.
+
+            # 5️⃣ Reiniciar el servicio Tomcat para cargar el nuevo archivo .war.
             sudo systemctl restart tomcat10
